# Data-Structures-1

./: README.md
Class18-9/: CMakeLists.txt  Ejem2.cpp  Ejem2.h  Ejem3.cpp  Ejem3.h  Ejercicio1.h  IteraCarros.h  Iteraciones.cpp  Notas.h  main.cpp
Class18-9/Class16-10/: Listas.cpp  Listas.h  Pilas.cpp  Pilas.h
Class18-9/RepasoC++/: Ejemplo4.cpp  Ejemplo4.h  Ejercicio1.cpp  IteraCarros.cpp  Iteraciones.h  Notas.cpp  main.cpp
Homework/Practica1/: Ejercicio1.cpp  Ejercicio2.cpp  Info.md
Homework/Practica1/Solution/: arrgpt.cpp  prac2gp.cpp
Homework/Practica2/: Ejercicio1.cpp  Ejercicio2.cpp
Practica1/Ejercicio1/: CMakeLists.txt  main.cpp
Practica1/Ejercicio2/: main.cpp
Practica2/: CMakeLists.txt  Ejer2.cpp  Ejer2.h  Ejercicio1.cpp  Ejercicio1.h
Videos/Recursividad/: Recursion.java
Videos/Structures/: CMakeLists.txt  ListaAcot.cpp  ListaAcot.h  ListaSTL.cpp  ListaSTL.h  Menu.cpp  Menu.h  Nodo.cpp  Nodo.h  Persona.cpp  Persona.h
Videos/Structures/ListaDoble/: ListaDoble.cpp  ListaDoble.h  NodoDoble.cpp  NodoDoble.h
Videos/Structures/Stacks/: Pila.cpp  Pila.h
test/: CMakeLists.txt  lstDoble.cpp  lstDoble.h  main.cpp  stack.cpp  stack.h
