cmake_minimum_required(VERSION 3.26)
project(Data_Structures_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Structures_1 main.cpp
        Ejercicio1.cpp
        Ejercicio1.h
        Ejem2.cpp
        Ejem2.h
        Ejem3.cpp
        Ejem3.h
        Ejemplo4.cpp
        Ejemplo4.h
        Iteraciones.cpp
        Iteraciones.h
        IteraCarros.cpp
        IteraCarros.h
        Notas.cpp
        Notas.h)
