cmake_minimum_required(VERSION 3.26)
project(Data_Structures_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Structures_1 RepasoC++/main.cpp
        RepasoC++/Ejercicio1.cpp
        RepasoC++/Ejercicio1.h
        RepasoC++/Ejem2.cpp
        RepasoC++/Ejem2.h
        RepasoC++/Ejem3.cpp
        RepasoC++/Ejem3.h
        RepasoC++/Ejemplo4.cpp
        RepasoC++/Ejemplo4.h
        RepasoC++/Iteraciones.cpp
        RepasoC++/Iteraciones.h
        RepasoC++/IteraCarros.cpp
        RepasoC++/IteraCarros.h
        RepasoC++/Notas.cpp
        RepasoC++/Notas.h
        Data-Structures-1/ListasArregMat.cpp
        Data-Structures-1/ListasArregMat.h
        Class16-10/Listas.cpp
        Class16-10/Listas.h
        Class16-10/Pilas.cpp
        Class16-10/Pilas.h)
