cmake_minimum_required(VERSION 3.26)
project(Structures)

set(CMAKE_CXX_STANDARD 17)

add_executable(Structures main.cpp
        ListaAcot.cpp
        ListaAcot.h
        Menu.cpp
        Menu.h
        ListaSTL.cpp
        ListaSTL.h
        Persona.cpp
        Persona.h
        Nodo.cpp
        Nodo.h)
